--- a/blog/templates/post.html
+++ b/blog/templates/post.html
@@ -6,7 +6,7 @@
 <a href="/"><- Back to index</a><br /></a>
 
 <h2>{{ post.title }}</h2>
-<img src={{ post.image.url }} />
+<img src={{ post.image.url }} width="250" height="250">
 <div>
     {{ post.content }}
 </div>
